# 2025-10-04-cake-fair-public

./: .gitignore  README.md  pyproject.toml
agent/: Dockerfile  pyproject.toml
agent/app/: context.py  main.py  setting.py
agent/app/agent/drink_preference_chat/: __init__.py  agent.py  prompt.py
agent/app/agent/multi/: agent.py
agent/app/agent/recommend/: __init__.py  agent.py  models.py  prompt.py
agent/app/agent/recommend/sub_agent/context_agent/: agent.py  prompt.py
agent/app/agent/recommend/sub_agent/order_agent/: agent.py  prompt.py
agent/app/agent/recommend/sub_agent/role_agent/: agent.py  prompt.py
agent/app/agent/response_preference_chat/: __init__.py  agent.py  prompt.py
agent/app/core/: __init__.py
api/: Dockerfile  pyproject.toml
api/app/: context.py  main.py  setting.py  setup.py
api/app/driver/: __init__.py  base.py  httpx.py  mongo.py  storage.py
api/app/middleware/: __init__.py  driver.py  request.py  trace.py
api/app/middleware/auth/: __init__.py  base.py  dependencies.py  docs_middleware.py  middleware.py  service.py
api/app/middleware/log/: __init__.py  filter.py  setup.py
api/app/router/: agent.py  context.py  mongo.py
api/app/schema/: agent.py  context.py  db.py  mongo.py  util.py
api/app/service/: agent.py  mongo.py
client/: Dockerfile  config.py  entrypoint.sh  pyproject.toml
client/app/: main.py  setting.py
client/app/page/: drink_preference.py  recommened.py  response_preference.py
client/app/page/util/: __init__.py
client/app/resource/: __init__.py  api.py  httpx.py  log.py
client/app/resource/prompt/: response_preference.py
(+2 files in other folders)
